--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
   <div class="container__card">
     <div class="card">
-      <img class="card-cube" src="./images/image-equilibrium.jpg" alt="cube">
+      <div class="card-img">
+        <img class="card-cube" src="./images/image-equilibrium.jpg" alt="cube">
+        <div class="img-view">
+          <div class="overlay"></div>
+        </div>
+      </div>
       <h3>Equilibrium #3429</h3>
       <p>Our Equilibrium collection promotes balance and calm.</p>
       <div class="card__items">
